2002-10-25  Stephane Carrez  <stcarrez@nerim.fr>

	Fix PR gdb/787
	* tuiWin.c (ACS_LRCORNER, ACS_LLCORNER, ACS_ULCORNER, ACS_URCORNER,
	ACS_HLINE, ACS_VLINE): Define if they don't exist.

2002-10-25  Stephane Carrez  <stcarrez@nerim.fr>

	Fix PR gdb/478
	* tuiIO.c (tui_initialize_io): Use setvbuf since this is portable.

2002-09-13  Stephane Carrez  <stcarrez@nerim.fr>

	* tui.c (tui_rl_switch_mode): Remove unecessary TUI switch printfs.
	(tui_initialize_readline): Allow to use space to leave SingleKey
	to enter one gdb command.
	(tui_enable): Restore the TUI keymap when we are back to TUI.
	(tui_disable): Restore normal keymap when leaving TUI.
	* tuiIO.c (tui_redisplay_readline): Restore the SingleKey mode
	when the buffer becomes empty and we are in tui_one_command_mode.

2002-09-13  Stephane Carrez  <stcarrez@nerim.fr>

	* tuiIO.c (tui_setup_io): rl_already_prompted must be cleared
	when leaving TUI mode so that gdb prompt is displayed.

2002-09-13  Stephane Carrez  <stcarrez@nerim.fr>

	* tuiStack.c (tui_make_status_line): Make sure the local buffer
	is large enough to hold the complete line.

2002-09-10  Stephane Carrez  <stcarrez@nerim.fr>

	* tui-hooks.c (tui_event_loop): New function.
	(tui_command_loop): New function to override gdb loop and make sure
	uiout is set according to TUI mode.
	(tui_command_loop): Install the specific TUI command hook.
	* tuiIO.c (tui_initialize_io): Initialize tui_old_uiout.
	(tui_uiout, tui_old_uiout): Make public.
	* tuiIO.h (tui_uiout, tui_old_uiout): Declare.

2002-09-04  Stephane Carrez  <stcarrez@nerim.fr>

	* tuiIO.c (tui_putc): New function to print one character.
	(printable_part): New function from readline/complete.c.
	(PUTX): New macro, likewise.
	(print_filename): New function, likewise.
	(get_y_or_n): New function, likewise and adapted for TUI.
	(tui_rl_display_match_list): New function from readline/complete.c
	and writes on TUI command window.
	(tui_setup_io): Install or remove the readline hook